--- a/index.html
+++ b/index.html
@@ -27,6 +27,58 @@
 			</div>
 		</div>
 	</nav>
+
+    <!-- Hero Section -->
+	<header id="hero" class="py-5 mb-4 custom-hero">
+		<div class="container">
+			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="max-height:400px;object-fit:cover;">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Embracing Diversity & Inclusion</h1>
+							<p class="lead" style="font-family: 'Merienda', cursive;">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="max-height:400px;object-fit:cover;">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Celebrating Differences</h1>
+							<p class="lead" style="font-family: 'Merienda', cursive;">Diversity brings new perspectives and ideas to every environment.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="max-height:400px;object-fit:cover;">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Inclusive Communities</h1>
+							<p class="lead" style="font-family: 'Merienda', cursive;">Inclusion means everyone has a voice and feels welcome.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="max-height:400px;object-fit:cover;">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Empowering Success</h1>
+							<p class="lead" style="font-family: 'Merienda', cursive;">Empowerment comes from respect and equal opportunity.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="max-height:400px;object-fit:cover;">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Together We Thrive</h1>
+							<p class="lead" style="font-family: 'Merienda', cursive;">Collaboration and understanding help everyone succeed.</p>
+						</div>
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
     <!--Js Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
