Add hero carousel, diversity & inclusion sections, and enhanced card/list styles

--- a/index.html
+++ b/index.html
@@ -79,6 +79,62 @@
 				</button>
 			</div>
 		</div>
+    </header>
+    <!-- Principles Section -->
+	<section id="principles" class="container mb-5">
+		<div class="row g-4">
+			<div class="col-md-6">
+				<div class="card h-100 shadow-sm">
+					<div class="card-body">
+						<h3 class="card-title section-header-gradient" style="font-family: 'Merienda', cursive;">What is Diversity?</h3>
+						<p class="card-text">Diversity means having people from different backgrounds, cultures, genders, ages, abilities, and perspectives. It includes visible differences (like race, gender) and invisible ones (like beliefs, experiences).</p>
+						<ul class="list-group list-group-flush mb-3">
+							<li class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
+							<li class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
+							<li class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
+							<li class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
+							<li class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
+							<li class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
+							<li class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="card h-100 shadow-sm">
+					<div class="card-body">
+						<h3 class="card-title section-header-gradient" style="font-family: 'Merienda', cursive;">What is Inclusion?</h3>
+						<p class="card-text">Inclusion is making sure everyone feels valued, respected, and able to contribute. It’s about creating an environment where all voices are heard and everyone has equal opportunities.</p>
+						<ul class="list-group list-group-flush mb-3">
+							<li class="list-group-item">Inclusion means inviting everyone to participate, whether in group discussions, activities, or decision-making.</li>
+							<li class="list-group-item">It’s about removing barriers so people of all backgrounds and abilities can join in and succeed.</li>
+							<li class="list-group-item">For example, using accessible materials, celebrating different holidays, and listening to everyone’s ideas are ways to be inclusive.</li>
+							<li class="list-group-item">Inclusion also means standing up for others and making sure no one feels left out or discriminated against.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-12">
+				<div class="card shadow-sm">
+					<div class="card-body">
+						<h3 class="card-title section-header-gradient" style="font-family: 'Merienda', cursive;">Why is Diversity & Inclusion Important?</h3>
+						<ul class="list-group list-group-flush mb-0">
+							<li class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
+							<li class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
+							<li class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
+							<li class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
+							<li class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
+							<li class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
     <!--Js Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
