--- a/index.html
+++ b/index.html
@@ -134,6 +134,44 @@
 		</div>
 	</section>
 
+    <!-- Tips Section -->
+	<section id="tips" class="container mb-5">
+		<div class="row justify-content-center">
+			<div class="col-lg-8">
+				<div class="card shadow-sm border-0">
+					<div class="card-body">
+						<h3 class="card-title mb-4 section-header-gradient" style="font-family: 'Merienda', cursive;">Simple Tips for Promoting Diversity & Inclusion</h3>
+						<ol class="list-group list-group-numbered mb-0">
+							<li class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
+							<li class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
+							<li class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
+							<li class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
+							<li class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
+							<li class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
+							<li class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+    <!-- Resources Section -->
+	<section id="resources" class="container mb-5">
+		<div class="row justify-content-center">
+			<div class="col-lg-8">
+				<div class="card shadow-sm border-0">
+					<div class="card-body text-center">
+						<h3 class="card-title mb-4 section-header-gradient" style="font-family: 'Merienda', cursive;">Explore More Resources</h3>
+						<a href="https://www.diversityresources.com/" target="_blank" class="btn btn-primary m-2">Diversity Resources</a>
+						<a href="https://www.inclusionhub.com/" target="_blank" class="btn btn-success m-2">Inclusion Hub</a>
+						<a href="https://www.edutopia.org/article/creating-inclusive-classroom" target="_blank" class="btn btn-info m-2">Inclusive Classroom Guide</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
     <!--Js Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
