--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
 		</div>
 	</section>
 
+    <!-- Footer -->
+			<footer id="footer" class="footer mt-auto py-3 text-white fixed-bottom">
+				<div class="container text-center">
+					<span class="small">&copy; 2025 Diversity & Inclusion Guide. All rights reserved.</span>
+				</div>
+			</footer>
 
     <!--Js Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
