--- a/index.html
+++ b/index.html
@@ -35,38 +35,38 @@
 			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_121432.png" class="rounded" alt="Group of diverse people smiling together, representing unity and inclusion.">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Embracing Diversity & Inclusion</h1>
-							<p class="lead" style="font-family: 'Merienda', cursive;">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
+							<h1 class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
+							<p class="lead">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122046.png" class="rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity.">
 						<div class="carousel-caption d-block" style="color:#fff;background:none;-webkit-background-clip:initial;-webkit-text-fill-color:#fff;background-clip:initial;text-shadow:none;filter:none;">
-							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Celebrating Differences</h1>
-							<p class="lead" style="font-family: 'Merienda', cursive;">Diversity brings new perspectives and ideas to every environment.</p>
+							<h1 class="display-4 fw-bold">Celebrating Differences</h1>
+							<p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122314.png" class="rounded" alt="Inclusive classroom with students of various backgrounds learning together.">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Inclusive Communities</h1>
-							<p class="lead" style="font-family: 'Merienda', cursive;">Inclusion means everyone has a voice and feels welcome.</p>
+							<h1 class="display-4 fw-bold">Inclusive Communities</h1>
+							<p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122658.png" class="rounded" alt="Empowered individuals working together in a supportive environment.">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Empowering Success</h1>
-							<p class="lead" style="font-family: 'Merienda', cursive;">Empowerment comes from respect and equal opportunity.</p>
+							<h1 class="display-4 fw-bold">Empowering Success</h1>
+							<p class="lead">Empowerment comes from respect and equal opportunity.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122941.png" class="rounded" alt="Team celebrating success together, highlighting the power of inclusion.">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Together We Thrive</h1>
-							<p class="lead" style="font-family: 'Merienda', cursive;">Collaboration and understanding help everyone succeed.</p>
+							<h1 class="display-4 fw-bold">Together We Thrive</h1>
+							<p class="lead">Collaboration and understanding help everyone succeed.</p>
 						</div>
 					</div>
 				</div>
