add hover colour #1E63FA to paragraph text elements

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 									<h3 class="card-title section-header-gradient">What is Diversity?</h3>
 									<p class="card-text">Diversity means having people from different backgrounds, cultures, genders, ages, abilities, and perspectives. It includes visible differences (like race, gender) and invisible ones (like beliefs, experiences).</p>
 									<ul class="list-group list-group-flush mb-3">
-										<li class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
-										<li class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
-										<li class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
-										<li class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
-										<li class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
-										<li class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
-										<li class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
+										<li id="text-hover" class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
+										<li id="text-hover" class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
+										<li id="text-hover" class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
+										<li id="text-hover" class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
+										<li id="text-hover" class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
+										<li id="text-hover" class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
+										<li id="text-hover" class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
 									</ul>
 								</div>
 							</div>
@@ -112,12 +112,12 @@
 								<div class="card-body">
 									<h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
 									<ul class="list-group list-group-flush mb-0">
-										<li class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
-										<li class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
-										<li class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
-										<li class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
-										<li class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
-										<li class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
+										<li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
+										<li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
+										<li id="text-hover" class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
+										<li id="text-hover" class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
+										<li id="text-hover" class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
+										<li id="text-hover" class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
 									</ul>
 								</div>
 							</div>
@@ -135,13 +135,13 @@
 								<div class="card-body">
 									<h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
 									<ol class="list-group list-group-numbered mb-0">
-										<li class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
-										<li class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
-										<li class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
-										<li class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
-										<li class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
-										<li class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
-										<li class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
+										<li id="text-hover" class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
+										<li id="text-hover" class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
+										<li id="text-hover" class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
+										<li id="text-hover" class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
+										<li id="text-hover" class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
+										<li id="text-hover" class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
+										<li id="text-hover" class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
 									</ol>
 								</div>
 							</div>
