Fix carousel text color and layout, force white headers, ensure text is right of image on large screens

--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<div class="d-flex align-items-center ms-auto">
-					<ul class="navbar-nav">
+				<div class="navbar-collapse-inner d-flex flex-column flex-lg-row w-100">
+					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#hero">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="#principles">Principles</a></li>
 						<li class="nav-item"><a class="nav-link" href="#tips">Tips</a></li>
 						<li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
 					</ul>
-					<button id="darkModeToggle" class="btn btn-light ms-3" type="button">Toggle Dark Mode</button>
+					<button id="darkModeToggle" class="btn btn-light ms-lg-3 mt-3 mt-lg-0 align-self-lg-center align-self-end" type="button">Toggle Dark Mode</button>
 				</div>
-			</div>
 		</div>
 	</nav>
 
@@ -65,38 +64,78 @@
 			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block">
-							<h1 id="section-header" class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
-							<p class="lead">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
+						<div class="container-fluid">
+							<div class="row align-items-center">
+								<div class="col-12 col-md-7 order-1 order-md-1">
+									<img src="assets/images/Copilot_20250827_121432.png" class="img-fluid w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion.">
+								</div>
+								<div class="col-12 col-md-5 order-2 order-md-2">
+									<div class="carousel-caption d-block text-start text-md-end">
+										<h1 id="section-header" class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
+										<p class="lead">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block">
-							<h1 id="section-header" class="display-4 fw-bold">Celebrating Differences</h1>
-							<p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
+						<div class="container-fluid">
+							<div class="row align-items-center">
+								<div class="col-12 col-md-7 order-1 order-md-1">
+									<img src="assets/images/Copilot_20250827_122046.png" class="img-fluid w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity.">
+								</div>
+								<div class="col-12 col-md-5 order-2 order-md-2">
+									<div class="carousel-caption d-block text-start text-md-end">
+										<h1 id="section-header" class="display-4 fw-bold">Celebrating Differences</h1>
+										<p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block">
-							<h1 id="section-header" class="display-4 fw-bold">Inclusive Communities</h1>
-							<p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
+						<div class="container-fluid">
+							<div class="row align-items-center">
+								<div class="col-12 col-md-7 order-1 order-md-1">
+									<img src="assets/images/Copilot_20250827_122314.png" class="img-fluid w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together.">
+								</div>
+								<div class="col-12 col-md-5 order-2 order-md-2">
+									<div class="carousel-caption d-block text-start text-md-end">
+										<h1 id="section-header" class="display-4 fw-bold">Inclusive Communities</h1>
+										<p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block">
-							<h1 id="section-header" class="display-4 fw-bold">Empowering Success</h1>
-							<p class="lead">Empowerment comes from respect and equal opportunity.</p>
+						<div class="container-fluid">
+							<div class="row align-items-center">
+								<div class="col-12 col-md-7 order-1 order-md-1">
+									<img src="assets/images/Copilot_20250827_122658.png" class="img-fluid w-100 rounded" alt="Empowered individuals working together in a supportive environment.">
+								</div>
+								<div class="col-12 col-md-5 order-2 order-md-2">
+									<div class="carousel-caption d-block text-start text-md-end">
+										<h1 id="section-header" class="display-4 fw-bold">Empowering Success</h1>
+										<p class="lead">Empowerment comes from respect and equal opportunity.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block">
-							<h1 id="section-header" class="display-4 fw-bold">Together We Thrive</h1>
-							<p class="lead">Collaboration and understanding help everyone succeed.</p>
+						<div class="container-fluid">
+							<div class="row align-items-center">
+								<div class="col-12 col-md-7 order-1 order-md-1">
+									<img src="assets/images/Copilot_20250827_122941.png" class="img-fluid w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion.">
+								</div>
+								<div class="col-12 col-md-5 order-2 order-md-2">
+									<div class="carousel-caption d-block text-start text-md-end">
+										<h1 id="section-header" class="display-4 fw-bold">Together We Thrive</h1>
+										<p class="lead">Collaboration and understanding help everyone succeed.</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
