Remove card scrollbars and update responsive layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- Bootstrap 5 CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	<style>
 @media (max-width: 991px) {
   .card-body {
@@ -51,6 +53,9 @@
 						<li class="nav-item"><a class="nav-link" href="#principles">Principles</a></li>
 						<li class="nav-item"><a class="nav-link" href="#tips">Tips</a></li>
 						<li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+						<li class="nav-item">
+  <a class="nav-link" href="#footer-social" aria-label="Social Links">Social</a>
+</li>
 					</ul>
 					<button id="darkModeToggle" class="btn btn-light ms-lg-3 mt-3 mt-lg-0 align-self-lg-center align-self-end" type="button">Toggle Dark Mode</button>
 				</div>
@@ -64,80 +69,42 @@
 			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<div class="container-fluid">
-							<div class="row align-items-center">
-								<div class="col-12 col-md-7 order-1 order-md-1">
-									<img src="assets/images/Copilot_20250827_121432.png" class="img-fluid w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion.">
-								</div>
-								<div class="col-12 col-md-5 order-2 order-md-2">
-									<div class="carousel-caption d-block text-start text-md-end">
-										<h1 id="section-header" class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
-										<p class="lead">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion.">
+    <div class="carousel-caption">
+      <h1 class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
+      <p class="lead">
+        Building environments where everyone feels valued, respected, and empowered to succeed.
+      </p>
+    </div>
+  </div>
 					<div class="carousel-item">
-						<div class="container-fluid">
-							<div class="row align-items-center">
-								<div class="col-12 col-md-7 order-1 order-md-1">
-									<img src="assets/images/Copilot_20250827_122046.png" class="img-fluid w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity.">
-								</div>
-								<div class="col-12 col-md-5 order-2 order-md-2">
-									<div class="carousel-caption d-block text-start text-md-end">
-										<h1 id="section-header" class="display-4 fw-bold">Celebrating Differences</h1>
-										<p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity.">
+    <div class="carousel-caption">
+      <h1 class="display-4 fw-bold">Celebrating Differences</h1>
+      <p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
+    </div>
+  </div>
 					<div class="carousel-item">
-						<div class="container-fluid">
-							<div class="row align-items-center">
-								<div class="col-12 col-md-7 order-1 order-md-1">
-									<img src="assets/images/Copilot_20250827_122314.png" class="img-fluid w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together.">
-								</div>
-								<div class="col-12 col-md-5 order-2 order-md-2">
-									<div class="carousel-caption d-block text-start text-md-end">
-										<h1 id="section-header" class="display-4 fw-bold">Inclusive Communities</h1>
-										<p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together.">
+    <div class="carousel-caption">
+      <h1 class="display-4 fw-bold">Inclusive Communities</h1>
+      <p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
+    </div>
+  </div>
 					<div class="carousel-item">
-						<div class="container-fluid">
-							<div class="row align-items-center">
-								<div class="col-12 col-md-7 order-1 order-md-1">
-									<img src="assets/images/Copilot_20250827_122658.png" class="img-fluid w-100 rounded" alt="Empowered individuals working together in a supportive environment.">
-								</div>
-								<div class="col-12 col-md-5 order-2 order-md-2">
-									<div class="carousel-caption d-block text-start text-md-end">
-										<h1 id="section-header" class="display-4 fw-bold">Empowering Success</h1>
-										<p class="lead">Empowerment comes from respect and equal opportunity.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment.">
+    <div class="carousel-caption">
+      <h1 class="display-4 fw-bold">Empowering Success</h1>
+      <p class="lead">Empowerment comes from respect and equal opportunity.</p>
+    </div>
+  </div>
 					<div class="carousel-item">
-						<div class="container-fluid">
-							<div class="row align-items-center">
-								<div class="col-12 col-md-7 order-1 order-md-1">
-									<img src="assets/images/Copilot_20250827_122941.png" class="img-fluid w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion.">
-								</div>
-								<div class="col-12 col-md-5 order-2 order-md-2">
-									<div class="carousel-caption d-block text-start text-md-end">
-										<h1 id="section-header" class="display-4 fw-bold">Together We Thrive</h1>
-										<p class="lead">Collaboration and understanding help everyone succeed.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion.">
+    <div class="carousel-caption">
+      <h1 class="display-4 fw-bold">Together We Thrive</h1>
+      <p class="lead">Collaboration and understanding help everyone succeed.</p>
+    </div>
+  </div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -157,6 +124,9 @@
 						<div class="col-12 d-flex">
 							<div class="card flex-fill shadow-sm mb-4">
 								<div class="row g-0 align-items-center">
+									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+										<img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end w-100" alt="Diversity illustration" style="object-fit:contain;">
+									</div>
 									<div class="col-12 col-md-7">
 										<div class="card-body">
 											<h3 id="section-header" class="card-title section-header-gradient">What is Diversity?</h3>
@@ -173,15 +143,15 @@
 											</ul>
 										</div>
 									</div>
-									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-										<img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end w-100" alt="Diversity illustration" style="object-fit:contain;">
-									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-12 d-flex">
 							<div class="card flex-fill shadow-sm">
 								<div class="row g-0 align-items-center">
+									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+										<img src="assets/images/diversity-inclusion-activities.png" class="img-fluid rounded-end w-100" alt="Diversity & Inclusion Activities" style="object-fit:contain;">
+									</div>
 									<div class="col-12 col-md-7">
 										<div class="card-body">
 											<h3 id="section-header" class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
@@ -197,9 +167,6 @@
 												<li id="text-hover" class="list-group-item">Promotes equal opportunities. When everyone is included, people have a fair chance to contribute and succeed.</li>
 											</ul>
 										</div>
-									</div>
-									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-										<img src="assets/images/diversity-inclusion-activities.png" class="img-fluid rounded-end w-100" alt="Diversity & Inclusion Activities" style="object-fit:contain;">
 									</div>
 								</div>
 							</div>
@@ -265,11 +232,31 @@
 
 	<!-- ...existing code... -->
 	<!-- Footer -->
-	<footer id="footer" class="footer mt-auto py-3 text-white fixed-bottom">
-		<div class="container text-center">
-			<span class="small">&copy; 2025 Diversity & Inclusion Guide. All rights reserved.</span>
-		</div>
-	</footer>
+	<footer class="footer mt-5 py-4" id="footer-social">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-12 col-md-4 text-md-start text-center mb-3 mb-md-0">
+        <div class="social-links">
+          <a href="https://facebook.com" target="_blank" rel="noopener" class="mx-2">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" rel="noopener" class="mx-2">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank" rel="noopener" class="mx-2">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://linkedin.com" target="_blank" rel="noopener" class="mx-2">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-8 text-center text-md-end">
+        <p class="mb-2 mb-md-0">© 2025 Diversity & Inclusion Project</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 	<!-- ...existing code... -->
 		<!-- Bootstrap JS Bundle and Custom Scripts -->
